// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a TextareaField with props 1`] = `
<Field
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={true}
  isLabelHidden={true}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Textarea
    aria-describedby="test-input-error test-input-help"
    defaultValue="Value"
    disabled={false}
    id="test-input"
    isAutoResizable={false}
    isInvalid={false}
    name="test"
    onChange={[Function]}
    required={false}
    rows={15}
    size="small"
    value="Value"
  />
</Field>
`;

exports[`should render a default TextareaField component 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Textarea
    disabled={false}
    id="test-input"
    isAutoResizable={false}
    isInvalid={false}
    name={null}
    required={false}
    rows={null}
    size="small"
  />
</Field>
`;

exports[`should render a disabled TextareaField component 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Textarea
    disabled={true}
    id="test-input"
    isAutoResizable={false}
    isInvalid={false}
    name={null}
    required={false}
    rows={null}
    size="small"
  />
</Field>
`;

exports[`should render a valid TextareaField with props 1`] = `
<Field
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={false}
  isLabelHidden={true}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Textarea
    aria-describedby="test-input-help"
    defaultValue="Value"
    disabled={false}
    id="test-input"
    isAutoResizable={false}
    isInvalid={false}
    name="test"
    onChange={[Function]}
    required={false}
    rows={null}
    size="small"
    type="number"
    value="Value"
  />
</Field>
`;
